Background Movement added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <section id="playButtonSection">
         <img src="./images_logos/playButton.png" alt="" id="playButton" onclick="play()">
     </section>
-
+    
     <!-- Page 2 Content -->
+    <div id="playBuildings"></div>
     <header id="playHeader">
             <div id="playCounter">0000</div>
             <img src="./images_logos/exitButton.png" alt="" id="playExit">
